<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="starfield_title">Starfield</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="status_bar_category">Status bar</string>
    <string name="notifications_panel_category">QS Panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="themes_category">Themes</string>
    <string name="build_tweaks_summary_title">Make your device shine!</string>
    <string name="listview">ListView</string>
    <string name="general_category">General</string>
    <string name="spoofing_category">Spoofing</string>
    <string name="clock_category">Clock</string>
    <string name="privacy_ind">Privacy indicators</string>
    <string name="font">Font style</string>
    <string name="icon">Icon style</string>
    <string name="pulse">Pulse Settings</string>
    <string name="animation">Animations</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels">dp</string>
    <string name="starfield_dialog_title">Time to shine!</string>
    <string name="starfield_dialog_message">If you find a bug with any of these settings, report it in our Telegram group. If it is something critical you MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel, Magisk/KernelSU modules and Starfield mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="starfield_dialog_toast">Shining in the Universe</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshot and screen record restrictions for all applications. Normally, content of some applications are replaced with black area in screenshots and screen records. This may be convenient in some cases but may lead to privacy leaks. After changing this toggle, you will need to restart applications for the change to take effect.</string>
   <string name="use_photos_spoof_title">Unlimited Photos storage</string>
    <string name="use_photos_spoof_summary">Spoof your device as Pixel XL for Google Photos app only to provide unlimited storage for backup</string>
    <string name="use_games_spoof_title">Unlock higher FPS in games</string>
    <string name="use_games_spoof_summary">Spoof your device as different model for specific games to unlock higher FPS</string>
    <string name="mic_camera_privacy_indicator_title">Sensor privacy indicators</string>
    <string name="mic_camera_privacy_indicator_summary">Show indicator when an app uses microphone or camera</string>
    <string name="location_privacy_indicator_title">Location privacy indicator</string>
    <string name="location_privacy_indicator_summary">Show indicator when an app uses location</string>
    <string name="projection_privacy_indicator_title">Media projection privacy indicator</string>
    <string name="projection_privacy_indicator_summary">Show indicator when device screen is projected</string>
    <string name="qs_show_data_usage_title">Show data usage</string>
    <string name="qs_show_data_usage_summary">Show daily cellular/Wi-Fi data usage in QS footer</string>
   <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
   <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="spoof_storage_encryption_status_title">Use storage encryption spoofing</string>
    <string name="spoof_storage_encryption_status_summary">Spoof storage encryption status to encrypted</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="show_fourg_icon_title">4G signal icon</string>
    <string name="show_fourg_icon_summary">Display 4G signal icon instead of LTE</string>
    <string name="wifi_standard_icon_title">WiFi standard</string>
    <string name="wifi_standard_icon_summary">Display WiFi standard next to WiFi signal bars</string>
    <string name="network_traffic_state_title">Network traffic indicator</string>
    <string name="network_traffic_state_summary">Enable or disable network speed indicator in status bar</string>
    <string name="network_traffic_title">Network traffic indicator</string>
    <string name="network_traffic_master_switch_title">Display current network traffic speed</string>
    <string name="network_options_title">Options</string>
    <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
    <string name="network_traffic_autohide_summary">Hide when network traffic is below 1 KB/s</string>
    <string name="category_name_qs_brightness_slider">Brightness slider</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Adjust brightness slider from the Quick Settings</string>
    <string name="qs_brightness_slider_never">Never show</string>
    <string name="qs_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_brightness_slider_always">Show always</string>
    <string name="qs_brightness_slider_position_title">Brightness slider position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="smart_pixels_warning_text">Smart Pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see improvement in battery life. Note that in some cases it can result in unresponsive areas on touch screen</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by disabling extra pixels</string>
    <string name="smart_pixels_enable_title">Enable Smart Pixels</string>
    <string name="smart_pixels_enable_summary">Disable pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percentage of pixels to disable</string>
    <string name="smart_pixels_shift_title">Burn-in protection</string>
    <string name="smart_pixels_shift_summary">Prevents burn-in on OLED devices by shifting pixels every so often</string>
    <string name="custom_timeout_summary_never">Never</string>
    <string name="custom_timeout_summary_15secs">15 seconds</string>
    <string name="custom_timeout_summary_30secs">30 seconds</string>
    <string name="custom_timeout_summary_1min">1 minute</string>
    <string name="custom_timeout_summary_2mins">2 minutes</string>
    <string name="custom_timeout_summary_5mins">5 minutes</string>
    <string name="custom_timeout_summary_10mins">10 minutes</string>
    <string name="custom_timeout_summary_20mins">20 minutes</string>
    <string name="custom_timeout_summary_30mins">30 minutes</string>
    <string name="custom_timeout_summary_1hour">1 hour</string>
    <string name="custom_timeout_summary_2hours">2 hours</string>
    <string name="custom_timeout_summary_4hours">4 hours</string>
    <string name="custom_timeout_summary_8hours">8 hours</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_font_title">Font style</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon style</string>
    <string name="theme_customization_icon_pack_summary">Set system icon pack style</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Wake your device up by pressing one of the volume keys</string>
     <string name="status_bar_clock_title">Clock &amp; date</string>
     <string name="status_bar_clock_summary">Customize clock &amp; date</string>
     <string name="status_bar_clock_seconds_title">Clock seconds</string>
     <string name="status_bar_clock_seconds_summary">Display seconds next to the clock in status bar</string>
     <string name="status_bar_clock_position_title">Clock style</string>
     <string name="status_bar_clock_position_right">Right</string>
     <string name="status_bar_clock_position_left">Left</string>
     <string name="status_bar_clock_position_center">Center</string>
     <string name="status_bar_clock_position_hidden">Hidden</string>
     <string name="status_bar_clock_auto_hide_title">Autohide</string>
     <string name="status_bar_clock_auto_hide_launcher_summary">Hide the clock if launcher is visible</string>
     <string name="status_bar_clock_auto_hide_summary">Hide the clock at regular interval</string>
     <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
     <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide the clock</string>
     <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
     <string name="status_bar_clock_auto_hide_sdur_summary">Number of seconds to wait before hiding the clock</string>
     <string name="status_bar_am_pm_title">AM/PM style</string>
     <string name="status_bar_am_pm_info">24-hour clock style is enabled</string>
     <string name="status_bar_am_pm_normal">Normal</string>
     <string name="status_bar_am_pm_small">Small</string>
     <string name="status_bar_am_pm_hidden">Hidden</string>
     <string name="status_bar_date_title">Date</string>
     <string name="status_bar_date_none">Hidden</string>
     <string name="status_bar_date_small">Small</string>
     <string name="status_bar_date_normal">Normal</string>
     <string name="status_bar_date_format_title">Date format</string>
     <string name="status_bar_date_style">Date style</string>
     <string name="status_bar_date_style_normal">Normal</string>
     <string name="status_bar_date_style_lowercase">Lowercase</string>
     <string name="status_bar_date_style_uppercase">Uppercase</string>
</resources>