<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    
    <PreferenceCategory
        android:key="prirvacy"
        android:title="@string/privacy_ind" >

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_camera_privacy_indicator"
            android:title="@string/mic_camera_privacy_indicator_title"
            android:summary="@string/mic_camera_privacy_indicator_summary"
            android:defaultValue="true" />

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_location_privacy_indicator"
            android:title="@string/location_privacy_indicator_title"
            android:summary="@string/location_privacy_indicator_summary"
            android:defaultValue="true" />

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_projection_privacy_indicator"
            android:title="@string/projection_privacy_indicator_title"
            android:summary="@string/projection_privacy_indicator_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
